Fix 'tests not found' issue